--- a/.github/workflows/publisher.yml
+++ b/.github/workflows/publisher.yml
@@ -2,7 +2,7 @@ name: Zombie-Publisher
 
 on:
   schedule:
-    - cron: '0 8 * * *' # Every day at 8 AM UTC
+    - cron: '0 */6 * * *' # Runs every 6 hours (00:00, 06:00, 12:00, 18:00)
   workflow_dispatch: # Button to run manually
 
 permissions:
