--- a/.github/workflows/publisher.yml
+++ b/.github/workflows/publisher.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Write Content
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          DEVTO_API_KEY: ${{ secrets.DEVTO_API_KEY }}
         run: python zombie_writer.py
 
       - name: Publish to Web
